# apertium-spa-cat

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.am.autogenerated  Makefile.am.default  Makefile.am.eco  README  alt.xsl  apertium-es-ca.ca-es.t1x  apertium-es-ca.ca.acx  apertium-es-ca.ca.dix  apertium-es-ca.ca.tsx  apertium-es-ca.es-ca.dix  apertium-es-ca.es-ca.t1x  apertium-es-ca.es.acx  apertium-es-ca.es.dix  apertium-es-ca.es.tsx  apertium-es-ca.post-ca.dix  apertium-es-ca.post-es.dix  apertium-es-ca.trules-ca-es.xml  apertium-es-ca.trules-es-ca.xml  apertium-spa-cat.cat-spa.lrx  apertium-spa-cat.cat-spa.metalrx  apertium-spa-cat.cat-spa.rtx  apertium-spa-cat.cat-spa.t1x  apertium-spa-cat.spa-cat.arx  apertium-spa-cat.spa-cat.biprefs.rlx  apertium-spa-cat.spa-cat.dix  apertium-spa-cat.spa-cat.lrx  apertium-spa-cat.spa-cat.metalrx  apertium-spa-cat.spa-cat.rtx  apertium-spa-cat.spa-cat.t1x  apertium-spa-cat.spa-cat.top-gva_biprefs.rlx  apertium-spa-cat.spa-cat.toponims-oficials.lrx  apertium-spa-cat.spa-cat.toponims-oficials.metalrx  apertium-spa-cat.spa-cat.toponims-trad.lrx  (+28 more)
.github/workflows/: bilingual.yml
ca-tagger-data/: ca.tagged  ca.tagged.txt
dev/: greptests.txt  tagging_errors.ca-es.txt  test-grep.sh  test-sentences-cat-spa.txt  test-sentences-cat.txt  test-sentences-spa-cat.txt  test-sentences-spa-cat_valencia.txt  test-sentences-spa.txt  test-translations.sh  testvoc.cat-spa.txt  testvoc.spa-cat.txt  testvoc.spa-cat_valencia.txt
dev/old_transfer/: cat-spa.txt
dev/testvoc/: bidix-unknowns.sh  generation.sh  inconsistency-summary.sh  inconsistency.sh  testvoc-summary.cat-spa.txt  testvoc-summary.spa-cat.txt  testvoc-summary.spa-cat_valencia.txt  testvoc-summary.spa-cat_valencia_uni.txt  testvoc.conf  testvoc.sh
es-tagger-data/: es.tagged  es.tagged.txt
test/: cat-spa-input.txt  cat-spa-lex-expected.txt  grep-all-expected.txt  sentences-cat-spa-postgen.txt  sentences-spa-cat-biltrans-expected.txt  sentences-spa-cat-generator-expected.txt  sentences-spa-cat-lex-expected.txt  sentences-spa-cat-postgen-expected.txt  sentences-spa-cat-postgen-gold.txt  sentences-spa-cat-prefs-expected.txt  sentences-spa-cat-tagger-expected.txt  sentences-spa-cat-toponims-expected.txt  sentences-spa-cat-transfer-expected.txt  sentences-spa-cat-unknown-expected.txt  sentences-spa-cat_valencia-biltrans-expected.txt  sentences-spa-cat_valencia-generator-expected.txt  sentences-spa-cat_valencia-morph2-expected.txt  sentences-spa-cat_valencia-postgen-expected.txt  sentences-spa-cat_valencia-toponims-expected.txt  sentences-spa-cat_valencia-transfer-expected.txt  test-grep.sh  test-sentences-cat.txt  test-sentences-spa.txt  tests.json
test/expected/: cat-spa-anaph.txt  cat-spa-disamb.txt  cat-spa-generator.txt  cat-spa-pretransfer.txt  cat-spa-unknown.txt  grep-all.txt  sentences-cat-spa-anaph.txt  sentences-cat-spa-biltrans.txt  sentences-cat-spa-disamb.txt  sentences-cat-spa-generator.txt  sentences-cat-spa-lex.txt  sentences-cat-spa-morph.txt  sentences-cat-spa-postgen.txt  sentences-cat-spa-pretransfer.txt  sentences-cat-spa-tagger.txt  sentences-cat-spa-transfer.txt  sentences-cat-spa-unknown.txt  sentences-spa-cat-anaph.txt  sentences-spa-cat-biltrans.txt  sentences-spa-cat-biprefs.txt  sentences-spa-cat-disamb.txt  sentences-spa-cat-generator.txt  sentences-spa-cat-lex.txt  sentences-spa-cat-morph.txt  sentences-spa-cat-morph2.txt  sentences-spa-cat-postgen.txt  sentences-spa-cat-prefs.txt  sentences-spa-cat-pretransfer.txt  sentences-spa-cat-tagger.txt  sentences-spa-cat-toponims.txt  sentences-spa-cat-transfer.txt  sentences-spa-cat-unknown.txt  sentences-spa-cat_valencia-disamb.txt  sentences-spa-cat_valencia-generator.txt  sentences-spa-cat_valencia-lex.txt  sentences-spa-cat_valencia-morph.txt  sentences-spa-cat_valencia-postgen.txt  sentences-spa-cat_valencia-prefs.txt  sentences-spa-cat_valencia-pretransfer.txt  sentences-spa-cat_valencia-unknown.txt  (+25 more)
test/gold/: cat-spa-postgen.txt  sentences-cat-spa-postgen.txt  sentences-spa-cat-postgen.txt  sentences-spa-cat_valencia-postgen.txt  sentences-spa-cat_valencia_gva-postgen.txt  spa-cat-postgen.txt
